# agnostic

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml  dns.yml  loc.yml  net.yml  process.yml
agnostic/: Cargo.toml  README.md
agnostic-dns/: Cargo.toml  README.md
agnostic-dns/src/: lib.rs  tests.rs
agnostic-io/: Cargo.toml  README.md
agnostic-io/src/: lib.rs  no_std.rs  std.rs
agnostic-lite/: Cargo.toml  README.md
agnostic-lite/src/: async_std.rs  embassy.rs  lib.rs  smol.rs  spawner.rs  time.rs  tokio.rs  wasm.rs
agnostic-lite/src/async_io/: delay.rs  interval.rs  sleep.rs  timeout.rs
agnostic-lite/src/async_std/: after.rs
agnostic-lite/src/embassy/: after.rs  delay.rs  interval.rs  sleep.rs  timeout.rs
agnostic-lite/src/smol/: after.rs
agnostic-lite/src/time/: delay.rs  interval.rs  sleep.rs  timeout.rs
agnostic-lite/src/tokio/: after.rs  delay.rs  interval.rs  sleep.rs  timeout.rs
agnostic-lite/src/wasm/: after.rs  delay.rs  interval.rs  sleep.rs  timeout.rs
agnostic-net/: Cargo.toml  README.md
agnostic-net/src/: async_io.rs  embassy.rs  lib.rs  quinn.rs  smol.rs  tcp.rs  tcp_socket.rs  tests.rs  to_socket_addrs.rs  tokio.rs  udp.rs  unix.rs  unknown.rs  windows.rs
agnostic-net/src/smol/: tcp_listener.rs  tcp_socket.rs  udp.rs
agnostic-net/src/tests/: tcp.rs  udp.rs
agnostic-net/src/tests/tcp/: smol.rs
agnostic-net/src/tests/udp/: async_std.rs  tokio.rs
agnostic-net/src/tokio/: tcp_listener.rs  tcp_socket.rs  tcp_stream.rs  udp.rs
agnostic-net/src/tokio/tcp_stream/: owned.rs
agnostic-process/: Cargo.toml  README.md
agnostic-process/src/: async_process_impl.rs  lib.rs  tests.rs  tokio.rs
agnostic-process/src/tests/: async_std.rs  tokio.rs
agnostic/src/: async_std.rs  lib.rs  lock.rs  macros.rs  monoio.rs  net.rs  process.rs  quinn.rs  smol.rs  tokio.rs
agnostic/src/async_std/: lock.rs  net.rs
agnostic/src/net/: dns.rs  to_socket_addr.rs
agnostic/src/smol/: lock.rs  net.rs  quinn_.rs
agnostic/src/tokio/: lock.rs  net.rs
async-std/: Cargo.toml
async-std/src/: lib.rs
ci/: coverage.sh
dns/: Cargo.toml
dns/src/: tests.rs
docs/rfc/: embedded-no_std-net.md
io/: Cargo.toml  README.md
lite/: .gitignore  Cargo.toml  README.md
lite/src/: async_io.rs  async_std.rs  block_spawner.rs  delay.rs  interval.rs  lib.rs  local_spawner.rs  sleep.rs  smol.rs  spawner.rs  timeout.rs  tokio.rs  wasm.rs
lite/src/async_io/: delay.rs  interval.rs  sleep.rs  timeout.rs
lite/src/async_std/: after.rs
lite/src/smol/: after.rs
lite/src/time/: delay.rs  interval.rs  sleep.rs  timeout.rs
lite/src/tokio/: after.rs  delay.rs  interval.rs  sleep.rs  timeout.rs
lite/src/wasm/: after.rs  delay.rs  interval.rs  sleep.rs  timeout.rs
mdns/: Cargo.toml
mdns/src/: client.rs  lib.rs  server.rs  tests.rs  utils.rs  zone.rs
mdns/src/tests/: server.rs  zone.rs
mdns/src/zone/: tests.rs
net/: Cargo.toml  README.md
net/src/: async_io.rs  async_std.rs  dns.rs  lib.rs  smol.rs  tcp.rs  tests.rs  to_socket_addrs.rs  tokio.rs  udp.rs  unix.rs  unknown.rs  windows.rs
net/src/async_std/: tcp_listener.rs  tcp_stream.rs  udp.rs
net/src/smol/: tcp_listener.rs  tcp_stream.rs  udp.rs
net/src/tests/: tcp.rs  udp.rs
net/src/tests/tcp/: tokio.rs
net/src/tests/udp/: async_std.rs  smol.rs  tokio.rs
net/src/tokio/: tcp_listener.rs  tcp_stream.rs  udp.rs
net/src/tokio/tcp_stream/: owned.rs
process/: Cargo.toml  README.md
process/src/: async_process_impl.rs  async_std.rs  lib.rs  tests.rs  tokio.rs
process/src/tests/: smol.rs
smol/: Cargo.toml
smol/src/: lib.rs
src/: async_std.rs  lib.rs  macros.rs  monoio.rs  net.rs  smol.rs  tokio.rs
src/async_std/: net.rs
src/net/: to_socket_addr.rs
src/smol/: net.rs  quinn_.rs
src/tokio/: net.rs
wasm/: Cargo.toml
wasm-agnostic/: Cargo.toml  Cargo.toml.bk  README.md
wasm-agnostic/src/: lib.rs  tokio.rs
wasm-agnostic/src/tokio/: lock.rs  net.rs
wasm/src/: lib.rs
