[package]
name = "agnostic-dns"
version = "0.3.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["asynchronous", "network-programming"]
keywords = ["agnostic", "dns"]
description = "`agnostic-dns` is an agnostic abstraction layer over `hickory-dns`."

[features]
default = []

tokio = ["agnostic-net/tokio"]
smol = ["agnostic-net/smol"]

tracing = ["dep:tracing"]

quic = ["hickory-resolver/__quic"]

tls-aws-lc-rs = [
  "hickory-resolver/tls-aws-lc-rs",
]
https-aws-lc-rs = [
  "hickory-resolver/https-aws-lc-rs",
]
quic-aws-lc-rs = [
  "hickory-resolver/quic-aws-lc-rs",
  "quic",
]
h3-aws-lc-rs = [
  "hickory-resolver/h3-aws-lc-rs",
  "quic",
]
tls-ring = [
  "hickory-resolver/tls-ring",
]
https-ring = [
  "hickory-resolver/https-ring",
]
quic-ring = [
  "hickory-resolver/quic-ring",
  "quic",
]
h3-ring = [
  "hickory-resolver/h3-ring",
  "quic",
]
dnssec-aws-lc-rs = [
  "hickory-resolver/dnssec-aws-lc-rs",
]
dnssec-ring = [
  "hickory-resolver/dnssec-ring",
]

[target.'cfg(target_family = "wasm")'.dependencies]
hickory-resolver = { version = "0.25", default-features = false, optional = true }

[target.'cfg(unix)'.dependencies]
hickory-resolver = { version = "0.25", default-features = false, features = [
  "system-config",
] }
rustix = { version = "1", features = ["net"] }

[target.'cfg(windows)'.dependencies]
hickory-resolver = { version = "0.25", default-features = false, features = [
  "system-config",
] }

[dependencies]
async-trait = "0.1"
agnostic-net.workspace = true
futures-util.workspace = true
hickory-proto = { version = "0.25", default-features = false }
resolv-conf = { version = "0.7", default-features = false }
tracing = { version = "0.1", optional = true }

quinn = { version = "0.11", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
