[package]
name = "agnostic-io"
version = "0.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Defines I/O traits for async runtime agnostic I/O."

[features]
default = ["std"]
alloc = []
std = ["futures-util/io"]
tokio = ["dep:tokio", "tokio-util", "std"]

[dependencies]
futures-util = { workspace = true, optional = true }

tokio = { workspace = true, default-features = false, optional = true }
tokio-util = { workspace = true, default-features = false, optional = true, features = ["compat"] }
