[package]
name = "agnostic-net"
version = "0.3.1"
workspace = ".."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["asynchronous", "network-programming"]
description = "Agnostic abstraction layer of `std::net` for any async runtime."

[features]
default = ["std"]
alloc = ["agnostic-io/alloc", "agnostic-lite/alloc"]
std = ["alloc", "agnostic-io/std", "agnostic-lite/std", "dep:socket2"]

# This feature must be used with net feature
# by enable this feature, TcpStream will implement
# both futures::AsyncRead/AsyncWrite and tokio::io::AsyncRead/AsyncWrite.
# But if you are using tokio, this feature can be ignored.
tokio-io = ["agnostic-io/tokio", "std"]

tokio = [
  "std",
  "dep:tokio",
  "agnostic-lite/tokio",
  "agnostic-io/tokio",
  "tokio-stream",
  "tokio/rt",
  "tokio/sync",
  "tokio/macros",
  "tokio/time",
  "tokio-io",
]
smol = ["std", "dep:smol", "agnostic-lite/smol", "async-io"]
embassy = ["alloc", "dep:embassy-net", "agnostic-lite/embassy"]
embassy-defmt = ["embassy", "embassy-net/defmt"]
embassy-dhcpv4 = ["embassy", "embassy-net/dhcpv4"]
embassy-dhcpv4-hostname = ["embassy", "embassy-net/dhcpv4-hostname"]
embassy-dns = ["embassy", "embassy-net/dns"]
embassy-mdns = ["embassy", "embassy-net/mdns"]
embassy-medium-ethernet = ["embassy", "embassy-net/medium-ethernet"]
embassy-medium-ieee802154 = ["embassy", "embassy-net/medium-ieee802154"]
embassy-medium-ip = ["embassy", "embassy-net/medium-ip"]
embassy-multicast = ["embassy", "embassy-net/multicast"]
embassy-proto-ipv4 = ["embassy", "embassy-net/proto-ipv4"]
embassy-proto-ipv6 = ["embassy", "embassy-net/proto-ipv6"]
embassy-raw = ["embassy", "embassy-net/raw"]
embassy-tcp = ["embassy", "embassy-net/tcp"]
embassy-udp = ["embassy", "embassy-net/udp"]

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["net"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Networking_WinSock"] }

[dependencies]
agnostic-lite = { workspace = true, features = ["time"] }
agnostic-io.workspace = true
async-trait = "0.1"
futures-util.workspace = true
socket2 = { version = "0.6", optional = true }
embassy-net = { version = "0.6", default-features = false, optional = true }

tokio = { version = "1", default-features = false, optional = true, features = ["net", "io-std", "io-util"] }
tokio-stream = { version = "0.1", default-features = false, optional = true, features = [
  "time",
] }

async-io = { workspace = true, optional = true }
paste = "1"
pin-project-lite = { workspace = true }
smol = { workspace = true, default-features = false, optional = true }

tracing = { version = "0.1", optional = true }

[dev-dependencies]
async-channel = "2"
tokio = { workspace = true, features = ["full"] }
