[package]
name = "agnostic-process"
version = "0.2.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["asynchronous"]
description = "Agnostic abstraction layer of `std::process` for any async runtime."

[features]
default = []

tokio = ["dep:tokio", "tokio-io"]
tokio-io = ["agnostic-io/tokio"]
smol = ["dep:smol", "async-process"]
async-std = ["dep:async-std", "async-process"]

[dependencies]
agnostic-io.workspace = true
futures-util.workspace = true
paste = "1"

async-process = { version = "2", optional = true }
tokio = { workspace = true, default-features = false, optional = true, features = ["process"] }
smol = { workspace = true, default-features = false, optional = true }
async-std = { workspace = true, default-features = false, optional = true, features = ["unstable"] }

[target.'cfg(windows)'.dev-dependencies.windows-sys]
version = "0.59"
default-features = false
features = [
  "Win32_Foundation",
  "Win32_System_Threading",
]

[dev-dependencies]
tokio = { workspace = true, default-features = false, features = ["process", "rt"] }
smol = { workspace = true, features = ["default"] }
async-std = { workspace = true, features = ["default"] }
