[package]
name = "agnostic"
version = "0.7.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "A Sans-I/O abstraction layer for any async runtime."
documentation = "https://docs.rs/agnostic"
readme = "README.md"
categories = ["asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
alloc = ["agnostic-lite/alloc"]
std = ["agnostic-lite/std"]

process = ["std", "dep:agnostic-process"]
net = ["std", "dep:agnostic-net"]
quinn = ["std", "quinn/log", "quinn-udp"]

tokio-io = ["std", "agnostic-io/tokio"]

## Runtime related features
tokio = [
  "std",
  "agnostic-lite/tokio",
  "agnostic-net?/tokio",
  "agnostic-dns?/tokio",
  "agnostic-process?/tokio",
  "quinn?/runtime-tokio",
]
async-std = [
  "std",
  "agnostic-lite/async-std",
  "agnostic-net?/async-std",
  "agnostic-dns?/async-std",
  "agnostic-process?/async-std",
  "quinn?/runtime-async-std",
]
smol = [
  "std",
  "agnostic-lite/smol",
  "agnostic-process?/smol",
  "agnostic-net?/smol",
  "agnostic-dns?/smol",
  "quinn?/runtime-smol",
]

tracing = ["std", "agnostic-dns/tracing"]

## DNS related features
dns = ["std", "dep:agnostic-dns"]
dns-over-quic = [
  "dns",
  "agnostic-dns/dns-over-quic",
]
dns-over-h3 = [
  "dns",
  "agnostic-dns/dns-over-h3",
]
dns-over-https-rustls = [
  "dns",
  "agnostic-dns/dns-over-https-rustls",
]
dns-over-rustls = [
  "dns",
  "agnostic-dns/dns-over-rustls",
]
dns-over-openssl = [
  "dns",
  "agnostic-dns/dns-over-openssl",
]
dns-over-native-tls = [
  "dns",
  "agnostic-dns/dns-over-native-tls",
]
dns-webpki-roots = [
  "dns",
  "agnostic-dns/dns-webpki-roots",
]
dns-native-certs = [
  "dns",
  "agnostic-dns/dns-native-certs",
]
dnssec-openssl = [
  "dns",
  "agnostic-dns/dnssec-openssl",
]
dnssec-ring = [
  "dnssec",
  "agnostic-dns/dnssec-ring",
]
dnssec = ["dns", "agnostic-dns/dnssec"]

[dependencies]
agnostic-lite = { workspace = true, features = ["time"] }
agnostic-dns = { workspace = true, optional = true }
agnostic-net = { workspace = true, optional = true }
agnostic-process = { workspace = true, optional = true }
agnostic-io.workspace = true

quinn = { version = "0.11", optional = true, default-features = false }
quinn-udp = { version = "0.5", optional = true, default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
