[package]
name = "agnostic"
version = "0.8.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "An agnostic abstraction layer for any async runtime."
documentation = "https://docs.rs/agnostic"
readme = "README.md"
categories = ["asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
alloc = ["agnostic-lite/alloc"]
std = ["agnostic-lite/std"]

process = ["std", "dep:agnostic-process"]
net = ["std", "dep:agnostic-net"]
quinn = ["std", "quinn/log", "quinn-udp"]

tokio-io = ["std", "agnostic-io/tokio"]

## Runtime related features
tokio = [
  "std",
  "agnostic-lite/tokio",
  "agnostic-net?/tokio",
  "agnostic-dns?/tokio",
  "agnostic-process?/tokio",
  "quinn?/runtime-tokio",
]
smol = [
  "std",
  "agnostic-lite/smol",
  "agnostic-process?/smol",
  "agnostic-net?/smol",
  "agnostic-dns?/smol",
  "quinn?/runtime-smol",
]

tracing = ["std", "agnostic-dns/tracing"]

## DNS related features
dns = ["std", "dep:agnostic-dns"]

tls-aws-lc-rs = [
  "dns",
  "agnostic-dns/tls-aws-lc-rs",
]
https-aws-lc-rs = [
  "dns",
  "agnostic-dns/https-aws-lc-rs",
]
quic-aws-lc-rs = [
  "dns",
  "agnostic-dns/quic-aws-lc-rs",
]
h3-aws-lc-rs = [
  "dns",
  "agnostic-dns/h3-aws-lc-rs",
]
tls-ring = [
  "dns",
  "agnostic-dns/tls-ring",
]
https-ring = [
  "dns",
  "agnostic-dns/https-ring",
]
quic-ring = [
  "dns",
  "agnostic-dns/quic-ring",
]
h3-ring = [
  "dns",
  "agnostic-dns/h3-ring",
]
dnssec-aws-lc-rs = [
  "dns",
  "agnostic-dns/dnssec-aws-lc-rs",
]
dnssec-ring = [
  "dns",
  "agnostic-dns/dnssec-ring",
]


[dependencies]
agnostic-lite = { workspace = true, features = ["time"] }
agnostic-dns = { workspace = true, optional = true }
agnostic-net = { workspace = true, optional = true }
agnostic-process = { workspace = true, optional = true }
agnostic-io.workspace = true

quinn = { version = "0.11", optional = true, default-features = false }
quinn-udp = { version = "0.5", optional = true, default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
