[package]
name = "agnostic-lite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

description = "`agnostic-lite` is WASM friendly and light version of `agnostic`, for users who want to write async runtime-agnostic crate."
documentation = "https://docs.rs/agnostic-lite"
readme = "README.md"
categories = ["asynchronous", "no-std"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []
time = ["std", "tokio?/time", "wasm?/time", "smol?/time", "async-std?/time"]

tokio = ["dep:tokio"]

async-io = ["dep:async-io", "time"]
smol = ["dep:smol", "async-io"]
async-std = ["dep:async-std", "async-io"]

wasm = [
  "std",
  "dep:wasm",
  "futures-channel",
  "futures-util/async-await-macro",
  "futures-util/async-await",
  "futures-util/std",
]

[dependencies]
futures-util.workspace = true
pin-project-lite.workspace = true

tokio = { version = "1", optional = true, default-features = false, features = [
  "rt",
] }

async-io = { workspace = true, optional = true }
async-std = { workspace = true, optional = true, features = ["default", "unstable"] }
smol = { workspace = true, optional = true }

wasm = { workspace = true, optional = true }
futures-channel = { version = "=0.3.29", optional = true }

[dev-dependencies]
futures = { version = "=0.3.29", features = ["executor"] }
tokio = { workspace = true, features = ["full"] }
