[package]
name = "agnostic-mdns"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[features]
default = ["std"]
alloc = []
std = ["smol_str/default", "thiserror/default", "smallvec-wrapper/default"]

[target.'cfg(not(any(target_family = "wasm", windows)))'.dependencies]
rustix = { version = "0.38", features = ["system"] }

[target.'cfg(windows)'.dependencies]
hostname = "0.4"

[dependencies]
agnostic = { path = "../agnostic", version = "0.4", features = ["dns"] }
smol_str = { version = "0.3", default-features = false }
smallvec-wrapper = { version = "0.2", default-features = false }
thiserror = { version = "2", default-features = false }
hickory-proto = { version = "0.24", features = ["mdns"] }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }