[package]
name = "agnostic-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["asynchronous", "network-programming"]
description = "An async runtime agnostic version `std::net`."

[features]
default = []

dns = ["hickory-resolver", "resolv-conf", "hickory-proto"]
dns-over-quic = [
  "dns",
  "hickory-resolver/dns-over-quic",
  "hickory-proto/dns-over-quic",
  "dns-over-rustls",
]
dns-over-h3 = [
  "dns",
  "hickory-resolver/dns-over-h3",
  "dns-over-rustls",
  "hickory-proto/dns-over-h3",
]
dns-over-https-rustls = [
  "dns",
  "hickory-resolver/dns-over-https-rustls",
  "hickory-proto/dns-over-https-rustls",
  "dns-over-rustls",
]
dns-over-rustls = [
  "dns",
  "hickory-resolver/dns-over-rustls",
  "hickory-proto/dns-over-rustls",
]
dns-over-openssl = [
  "dns",
  "hickory-resolver/dns-over-openssl",
  "hickory-proto/dns-over-openssl",
]
dns-over-native-tls = [
  "dns",
  "hickory-resolver/dns-over-native-tls",
  "hickory-proto/dns-over-native-tls",
]
dns-webpki-roots = [
  "dns",
  "hickory-proto/webpki-roots",
  "hickory-resolver/webpki-roots",
]
dns-native-certs = [
  "dns",
  "hickory-proto/native-certs",
  "hickory-resolver/native-certs",
]
dnssec-openssl = [
  "dns",
  "hickory-proto/dnssec-openssl",
  "hickory-resolver/dnssec-openssl",
]
dnssec-ring = [
  "dnssec",
  "hickory-proto/dnssec-ring",
  "hickory-resolver/dnssec-ring",
]
dnssec = ["dns", "hickory-proto/dnssec", "hickory-resolver/dnssec"]


# This feature must be used with net feature
# by enable this feature, TcpStream will implement
# both futures::AsyncRead/AsyncWrite and tokio::io::AsyncRead/AsyncWrite.
# But if you are using tokio, this feature can be ignored.
tokio-io = ["agnostic-io/tokio"]

tokio = [
  "dep:tokio",
  "agnostic-lite/tokio",
  "agnostic-io/tokio",
  "pin-project-lite",
  "tokio-stream",
  "tokio/rt",
  "tokio/sync",
  "tokio/macros",
  "tokio/time",
  "tokio-io",
]
async-std = [
  "dep:async-std",
  "agnostic-lite/async-std",
  "async-io",
  "pin-project-lite",
]
smol = ["dep:smol", "agnostic-lite/smol", "pin-project-lite", "async-io"]

tracing = ["dep:tracing"]

[target.'cfg(unix)'.dependencies]
hickory-resolver = { version = "0.24", default-features = false, optional = true, features = [
  "system-config",
] }

[target.'cfg(windows)'.dependencies]
hickory-resolver = { version = "0.24", default-features = false, optional = true, features = [
  "system-config",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
hickory-resolver = { version = "0.24", default-features = false, optional = true }

[dependencies]
agnostic-lite = { workspace = true, features = ["time"] }
agnostic-io.workspace = true
async-trait = "0.1"
futures-util.workspace = true

tokio = { version = "1", default-features = false, optional = true, features = ["net", "io-std", "io-util"] }
tokio-stream = { version = "0.1", default-features = false, optional = true, features = [
  "time",
] }

async-std = { workspace = true, optional = true, features = [
  "unstable",
  "default",
] }
async-io = { workspace = true, optional = true }
pin-project-lite = { workspace = true, optional = true }
smol = { workspace = true, default-features = false, optional = true }

async-channel = { version = "2", optional = true }

hickory-proto = { version = "0.24", default-features = false, optional = true }
resolv-conf = { version = "0.7", default-features = false, optional = true }

socket2 = "0.5"

tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
